compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__list_literals_redundant_comparison_5.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main(a) { [1, ..a] == [1, ..a] }"
---
----- SOURCE CODE
pub fn main(a) { [1, ..a] == [1, ..a] }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ pub fn main(a) { [1, ..a] == [1, ..a] }
  │                  ^^^^^^^^^^^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
